# Rays

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_shaders.sh
crt/: CMakeLists.txt  main.cpp
python/: importance_sampling.py
shaders/: CMakeLists.txt  functions.glsl  gradient.comp  gradient_color.comp  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shadow.rmiss  simple_mesh.frag  simple_mesh.vert  sky.comp  triangle.frag  triangle.vert  triangle_mesh.vert  types.glsl
src/: CMakeLists.txt  acceleration_structures.cpp  acceleration_structures.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  descriptors2.cpp  descriptors2.hpp  engine.cpp  engine.hpp  init.cpp  init.hpp  lights.cpp  lights.hpp  loader.cpp  loader.hpp  loader2.cpp  loader2.hpp  main.cpp  model.cpp  model.hpp  pipelines_compute.cpp  pipelines_compute.hpp  presampling.cpp  presampling.hpp  raster_pipelines.cpp  raster_pipelines.hpp  ray_tracing.cpp  ray_tracing.hpp  rt_descriptors.cpp  rt_descriptors.hpp  rt_pipelines.cpp  rt_pipelines.hpp  shader_binding_tables.cpp  shader_binding_tables.hpp  types.hpp  ubo.cpp  ubo.hpp  uniform_buffers.cpp  (+3 more)
